# BaguaTool

./: .clang-format  CMakeLists.txt  Makefile  README.md  TODO
bashrc/: baguatool_bashrc  python_bashrc
example/apps/ct_bin/: ctHotspot.py
example/apps/graph500_bin/: graph500Hotspot.py
example/apps/jasmin_bin/: eularStructModeling.py  rotHotspot.py  snsweepStructModeling.py
example/apps/miniVite_bin/: minivite_hotspot.py
example/apps/npb_bin/: npb_hotspot.py  root.gml
example/apps/zeusmp_bin/: graph_difference_zeusmp.py  zeusmpHotspot.py
example/project/GraphPerf/: CMakeLists.txt  pthread_sampler.cpp  single_process_sampler.cpp
example/project/GraphPerf/scaling_loss_detection/: graph_difference_npb.py
example/project/graph_perf/: CMakeLists.txt
example/project/graph_perf/src/hybrid_collector/dynamic/: mpi_omp_sampler.cpp  omp_init.h  omp_sampler.cpp  pthread_sampler.cpp
example/project/graph_perf/src/offline_analysis/: graph_perf.cpp  graph_perf.h  utils.h
example/project/graph_perf/test/: CMakeLists.txt
example/project/graph_perf/test/recursive_test/: Makefile  hybrid_collect.sh  offline_analysis.sh  recursive_test_1.cpp
example/project/graph_perf/tools/: CMakeLists.txt  dynamic_pcg_test.cpp  mpi_mpag_generation.cpp  omp_mpag_generation.cpp  pag_generation.cpp  pthread_mpag_generation_example.cpp  static_pag_generation.cpp
example/reproduction/GraphPerf/scaling_loss_detection/: collect_perfdata_commdep_npb.py  graph_difference_zeusmp.py  lowest_common_ancestor_zeusmp.py
example/reproduction/cypress/: npb_cypress.py  run.py  run_cypress.py
example/simple/: CMakeLists.txt  basicgraph_test.py  cg.A.4  critical_path.cpp  data_embedding_test.cpp  dfs_test.cpp  example.toml  json_test.cpp  openmp_sampler.cpp  pag_generation.cpp  pcg_test.py  preprocess.cpp  pthread_mpag_generation_example.cpp  pthread_sampler.cpp  read_perf_data.cpp  run.sh  sampler_test.cpp  shared_obj_addr_trans.cpp  single_process  single_process_sampler.cpp  static_analysis.cpp  static_analysis_example.cpp  static_pag_generation.cpp  toml_test.cpp
example/simple/pthread_test/: Makefile  hybrid_collect.sh  offline_analysis.sh  pthread_test.cpp
include/: baguatool.h
python/: graphvizoutput.py  output.py
reproduction/GraphPerf/scaling_loss_detection/: collect_perfdata_commdep_zeusmp.py  psg_ppg_zeusmp.py
script/: format.sh
src/: .TODO.swp  pag.cpp  pag.h  utils.h  vertex_type.h
src/Baguatool/: asemble.py  baguatool.py  commdep.py  graphviz.py  graphvizloc.py  models.py  node.py  output.py  perfdata.py  ppg.py  psg.py
src/GraphPerf/preprocessing/: main.cpp  preprocess.cpp  preprocess.h
src/GraphSD/dyninst/: PSG.h  igraph.cpp  main.cpp  static_analysis.cpp  static_analysis.h
src/GraphSD/papi/: sampler.cpp  sampler.h
src/collector/dynamic/: shared_obj_analysis.cpp  shared_obj_analysis.h
src/collector/dynamic/papi/: sampler.cpp  sampler.h
src/collector/static/dyninst/: static_analysis.cpp  static_analysis.h
src/common/: common.h  tprintf.h  utils.cpp  utils.h
src/core/: cfg.cpp  cfg.h  graph.cpp  graph.h  graph_perf_data.cpp  hybrid_analysis.cpp  hybrid_analysis.h  pag.cpp  pag.h  pcg.cpp  pcg.h  perf_data.cpp  perf_data.h  pg.cpp  vertex_type.h
src/dynamicAnalysis/commdependence/: MPID0.TXT  MPID1.TXT  MPID2.TXT  MPID3.TXT  MPID4.TXT  MPID5.TXT  MPID6.TXT  MPID7.TXT  MPIT5.TXT  Makefile  cg.B.8  cg.C.8  commDepDetect  commDepDetect.cpp  commDepDetectApproxi.cpp  commDependence.cpp  commDependence.w  commDependence_v1.1 copy.w  commSplitTest  commSplitTest.cpp  ft.C.8  lu.C.8  mg.C.8  mpi_request_lib.cpp  mpi_wait_test  mpi_wait_test.cpp
src/dynamicAnalysis/commdependence/wrap/: commData.cpp  commData.w  commInit.cpp  mpi_request_lib.w
src/dynamicAnalysis/commdependence/wrap/examples/: Makefile  world48.C
src/dynamicAnalysis/instrumentation/: Makefile  dyninst_bashrc  hello  hello.cpp  lib.c  lib.c.bak  lib.h  lib_mpi.c  linadvsl-2d.input-np16-p16  loop.txt  loop_instrument  papi_avail.list  patch.cpp  patch_psg.cpp  run.sh  run_linadvsl.sh
src/dynamicAnalysis/instrumentation/javis_linadv2d/: dumps.javis
src/dynamicAnalysis/instrumentation/javis_linadv2d/javis_dump.00000/: processor_cluster.00000.jasmin  processor_cluster.00001.jasmin  summary.jasmin
src/dynamicAnalysis/instrumentation/javis_linadv2d/javis_dump.00100/: processor_cluster.00000.jasmin  processor_cluster.00001.jasmin  summary.jasmin
src/dynamicAnalysis/sampling/: IRStruct.h  Makefile  commData.cpp  detect-addr.cpp  dynco_bashrc  dyncollect.cpp  dyncollect_multiPMU.cpp  dyncollect_multiPMU_2.cpp  dyncollect_multiPMU_lib.cpp  sampler_omp.c  scalana-detect-addr
src/dynamicAnalysis/sampling/wrap/: world48.c
src/dynamicAnalysis/sampling/wrap/examples/: CMakeCache.txt  cmake_install.cmake
src/graph_perf/: graph_perf.cpp  graph_perf.h  mpi_init.h  omp_sampler.cpp  pthread_sampler.cpp
src/graph_perf/preprocessing/: preprocess.cpp  preprocess.h
src/staticAnalysis/: PSG.cpp  PSG.h  cpsfile.py  parsepsg.sh  psg-addr.cpp  psg-so-addr.cpp  scalana-psg  scalana-psg-addr
src/staticAnalysis/instruction_counter/: Makefile  PSG-addr.cpp  PSG.h  advancepatch.ins  initsetvalue.ins  instruction.cpp  instruction_psg.cpp  instruction_psg_counter  main2d.asm  obj.txt  test  test.cpp
test/NPB_bin/: graph_difference_cg.py  npbCommDep.py  npbHotspot.py  read_json_psg_npb.py
test/cloverleaf_bin/: cloverleaf_hotspot.py
test/gromacs_bin/: gromacsHotspot.py
test/igraph_test/: CMakeLists.txt  igraph.cpp
test/jasmin_bin/: MDstructHotspot.py  MDstructModeling.py  eularStructHotspot.py  linAdvSLstructHotspot.py  linAdvSLstructModeling.py  rotStructModeling.py  snsweepStructHotspot.py
test/lulesh_bin/: luleshHotspot.py
test/miniVite_bin/: minivite_hotspot.py
test/npb_bin/: example_run.sh  root.dot
test/tinker_bin/covid.run/: covidModeling.py
test/zeusmp_bin/: zeusmpCommDep.py
