add_executable(pag_generation pag_generation.cpp)
add_executable(static_analysis_example static_analysis_example.cpp)
add_executable(read_perf_data read_perf_data.cpp)
add_executable(json_test json_test.cpp)
add_executable(toml_test toml_test.cpp)
add_executable(data_embedding_test data_embedding_test.cpp)
add_executable(pthread_mpag_generation_example pthread_mpag_generation_example.cpp)
#add_library(single_process_sampler SHARED single_process_sampler.cpp)
#add_library(pthread_sampler SHARED pthread_sampler.cpp)


target_link_libraries(pag_generation PRIVATE baguatool)
target_link_libraries(static_analysis_example PRIVATE baguatool)
#target_link_libraries(single_process_sampler PRIVATE baguatool)
#target_link_libraries(pthread_sampler PRIVATE baguatool)
target_link_libraries(read_perf_data PRIVATE baguatool)
target_link_libraries(json_test PRIVATE baguatool)
target_link_libraries(toml_test PRIVATE baguatool)
target_link_libraries(data_embedding_test PRIVATE baguatool)
target_link_libraries(pthread_mpag_generation_example PRIVATE baguatool)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/run.sh ${CMAKE_CURRENT_BINARY_DIR}/run.sh COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cg.A.4 ${CMAKE_CURRENT_BINARY_DIR}/cg.A.4 COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/basicgraph_test.py ${CMAKE_CURRENT_BINARY_DIR}/basicgraph_test.py COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/example.toml ${CMAKE_CURRENT_BINARY_DIR}/example.toml COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/pthread_test/Makefile ${CMAKE_CURRENT_BINARY_DIR}/pthread_test/Makefile COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/pthread_test/pthread_test.cpp ${CMAKE_CURRENT_BINARY_DIR}/pthread_test/pthread_test.cpp COPYONLY)
